fix large gap at bottom when javascript is disabled

--- a/src/app/(Portfolio)/globals.css
+++ b/src/app/(Portfolio)/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@Layer base {
+  canvas {
+    position: fixed;
+  }
+}
+
 @layer components {
   .text-name {
     background: var(--text-gradient);
